--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+ <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
 
   <!--Include generated Papermod stylsheet for somehwat accurate previews in Netlify CMS editor -->
   <script>
