chore(cms): refining preview admin cms to decab

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -12,7 +12,7 @@
 
   <!--Include generated Papermod stylsheet for somehwat accurate previews in Netlify CMS editor -->
   <script>
-  CMS.registerPreviewStyle("/assets/css/stylesheet.css"); // Note you must have fingerprinting disabled in config.yml for this to work 
+  CMS.registerPreviewStyle("/assets/css/extended/dracula.css"); // Note you must have fingerprinting disabled in config.yml for this to work 
  </script>
 
 </body>
